// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/no_results_indicator should match snapshot when expanded 1`] = `
<div
  className="no-results__holder"
>
  <div
    className="no-results__wrapper"
  >
    <div
      className="no-results__variant-wrapper"
    >
      <SearchSVG
        className="no-results__icon"
      />
    </div>
    <div
      className="no-results__text-container"
    >
      <h3
        className="no-results__title"
      >
        <MemoizedFormattedMessage
          defaultMessage="No results for “{channelName}”"
          id="no_results.search.title"
        />
      </h3>
      <div
        className="no-results__subtitle"
      >
        <MemoizedFormattedMessage
          defaultMessage="Check the spelling or try another search."
          id="no_results.search.subtitle"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with default props 1`] = `
<div
  className="no-results__wrapper"
>
  <div
    className="no-results__text-container"
  />
</div>
`;

exports[`components/no_results_indicator should match snapshot with horizontal layout 1`] = `
<div
  className="no-results__wrapper horizontal-layout"
>
  <div>
    Test
  </div>
  <div
    className="no-results__text-container"
  >
    <h3
      className="no-results__title"
    >
      Test
    </h3>
    <div
      className="no-results__subtitle"
    >
      Subtitle
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with variant ChannelFiles 1`] = `
<div
  className="no-results__wrapper"
>
  <div>
    Test
  </div>
  <div
    className="no-results__text-container"
  >
    <h3
      className="no-results__title"
    >
      <MemoizedFormattedMessage
        defaultMessage="No files yet"
        id="no_results.channel_files.title"
      />
    </h3>
    <div
      className="no-results__subtitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Files posted in this channel will show here."
        id="no_results.channel_files.subtitle"
      />
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with variant ChannelFilesFiltered 1`] = `
<div
  className="no-results__wrapper"
>
  <div>
    Test
  </div>
  <div
    className="no-results__text-container"
  >
    <h3
      className="no-results__title"
    >
      <MemoizedFormattedMessage
        defaultMessage="No files found"
        id="no_results.channel_files_filtered.title"
      />
    </h3>
    <div
      className="no-results__subtitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="This channel doesn't contains any file with the selected file format."
        id="no_results.channel_files_filtered.subtitle"
      />
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with variant ChannelSearch 1`] = `
<div
  className="no-results__wrapper"
>
  <div>
    Test
  </div>
  <div
    className="no-results__text-container"
  >
    <h3
      className="no-results__title"
    >
      <MemoizedFormattedMessage
        defaultMessage="No results for “{channelName}”"
        id="no_results.channel_search.title"
      />
    </h3>
    <div
      className="no-results__subtitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Check the spelling or try another search."
        id="no_results.channel_search.subtitle"
      />
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with variant FlaggedPosts 1`] = `
<div
  className="no-results__wrapper"
>
  <div>
    Test
  </div>
  <div
    className="no-results__text-container"
  >
    <h3
      className="no-results__title"
    >
      <MemoizedFormattedMessage
        defaultMessage="No saved messages yet"
        id="no_results.flagged_posts.title"
      />
    </h3>
    <div
      className="no-results__subtitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="To save something for later, open the context menu on a message and choose {buttonText}. Saved messages are only visible to you"
        id="no_results.flagged_posts.subtitle"
      />
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with variant Mentions 1`] = `
<div
  className="no-results__wrapper"
>
  <div>
    Test
  </div>
  <div
    className="no-results__text-container"
  >
    <h3
      className="no-results__title"
    >
      <MemoizedFormattedMessage
        defaultMessage="No mentions yet"
        id="no_results.mentions.title"
      />
    </h3>
    <div
      className="no-results__subtitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="Messages where someone mentions you or includes your trigger words are saved here."
        id="no_results.mentions.subtitle"
      />
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with variant PinnedPosts 1`] = `
<div
  className="no-results__wrapper"
>
  <div>
    Test
  </div>
  <div
    className="no-results__text-container"
  >
    <h3
      className="no-results__title"
    >
      <MemoizedFormattedMessage
        defaultMessage="No pinned messages yet"
        id="no_results.pinned_messages.title"
      />
    </h3>
    <div
      className="no-results__subtitle"
    >
      <MemoizedFormattedMessage
        defaultMessage="To pin important messages, open the context menu on a message and choose {text}. Pinned messages will be visible to everyone in this channel."
        id="no_results.pinned_messages.subtitle"
      />
    </div>
  </div>
</div>
`;
